app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
 *= require_self
 *= require_tree .
 *= require select2
 *= require vendor
 */

@import "scaffolds";

/* all pages */

body {
  font-weight: lighter;
  padding-top: 60px;
  padding-left: 20px;
}

.avatar {
  border-radius: 50%;
  margin-right: 5px;
  margin-left: 5px;
}

.navbar .nav > li > .avatar-link {
  padding-top: 5px;
  padding-right: 15px;
  padding-bottom: 5px;
  padding-left: 15px;
}

.navbar {
  position: static;
}

#navbar-container {
  max-width: 960px
}

.navbar .pull-right > li > a {
  padding-top: 10px;
  padding-right: 5px;
  padding-bottom: 10px;
  padding-left: 5px;
}

#main {
  max-width: 960px;
  margin: 25px auto;
  margin-bottom: 0px;
}

footer {
  text-align: center;
  font-size: 12px;
  li {
    display: inline;
    margin-right: 20px;
  }
}

@media (max-width: 480px) {
  body, #main {
    margin: 0px !important;
    padding: 0px;
  }
}

.compact-form {
  input[type=text], input[type=email], input[type=password] {
    width: 95%;
  }
}

pre.highlighted {
  padding: 0px;
  border: none;
  margin-bottom: 0px;
}
.red{
  color: #990000;
}

